--- a/README
+++ b/README
@@ -1,1 +1,6 @@
-This repo stores files for the UMinho subject PAS. 
+Jorge Mendes
+Paul van der Walt
+
+Second Project for PAS, UMinho
+
+Modeling XYZ News' website.
